2014-02-18  Joseph Pecoraro  <pecoraro@apple.com>

        Web Inspector: shift-clicking #fff swatch results in bad rgb value
        https://bugs.webkit.org/show_bug.cgi?id=128954

        Reviewed by Daniel Bates.

        parseInt("FF", 16) is already 255. Do not multiply the result by 255.

        * UserInterface/Color.js:
        (WebInspector.Color.fromString):

2014-02-18  Antoine Quint  <graouts@webkit.org>

        Web Inspector: color picker sliders sometime look wrong on Retina display
        https://bugs.webkit.org/show_bug.cgi?id=128963

        Reviewed by Timothy Hatcher.

        Round the values used to position and size popovers in order to ensure that their content don't suffer
        from poor pixel alignment on Retina displays.

        * UserInterface/Popover.js:
        (WebInspector.Popover.prototype.set frame):

2014-02-17  Antoine Quint  <graouts@webkit.org>

        Web Inspector: CSS selectors containing a color name shouldn't be considered for color editing
        https://bugs.webkit.org/show_bug.cgi?id=128909

        Reviewed by Joseph Pecoraro.

        Disregard any text that might be contained within a CSS selector.

        * UserInterface/CodeMirrorAdditions.js:

2014-02-15  Chris J. Shull  <chrisjshull@gmail.com>

        Web Inspector: scope chain details sidebar doesn't update values modified via console
        https://bugs.webkit.org/show_bug.cgi?id=126855

        Reviewed by Timothy Hatcher.

        Add a RuntimeManager event that the scope chain details sidebar can 
        listen to to trigger refresh.

        Testing on this is blocked by http://webkit.org/b/128724
        (Web Inspector: Issue testing breakpoints).

        * UserInterface/RuntimeManager.js:
        (WebInspector.RuntimeManager.prototype.evalCallback):
        (WebInspector.RuntimeManager.prototype.evaluateInInspectedWindow):
        * UserInterface/ScopeChainDetailsSidebarPanel.js:
        (WebInspector.ScopeChainDetailsSidebarPanel):
