@@ -1,3 +1,15 @@
+2014-02-18  Antoine Quint  <graouts@webkit.org>
+
+        Web Inspector: Editing transparent color shows incorrect opacity slider
+        https://bugs.webkit.org/show_bug.cgi?id=128975
+
+        Reviewed by Joseph Pecoraro.
+
+        The opacity slider should show a range of colors from transparent to the full opacity of the tinted color.
+
+        * UserInterface/ColorPicker.js:
+        (WebInspector.ColorPicker.prototype._updateSliders):
+
 2014-02-18  Joseph Pecoraro  <pecoraro@apple.com>
 
         Web Inspector: shift-clicking #fff swatch results in bad rgb value
